tests/errors/test_09.xpp
// Incompatible type for this unary operator

enum Boolean {TRUE, FALSE}

fn main() void {
    let x = 21;
    let y = !x;

    let z = -true;

	let b = false;
	++b;

    let mut c = Boolean::TRUE;
    ++c;
}
